--- a/src/sass/base/_projects.scss
+++ b/src/sass/base/_projects.scss
@@ -1,7 +1,7 @@
 .title-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 #projects {
   background-color: $cc-background;
@@ -55,5 +55,6 @@ article.project-item {
 
 .project-category {
   opacity: 0;
-  transform: translateX(200%);
+  // transform: translateX(200%);
+  transform: translateY(-200%);
 }
