--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -106,3 +106,4 @@ $shadow-4: 0px 8px 44px 0px rgba(78, 61, 232, 0.12);
 $breakpoint-mobile-max: 767px;
 $breakpoint-tablet-min: 768px;
 $breakpoint-desktop-min: 1024px;
+$breakpoint-xl-desktop-min: 1280px;
