--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,8 +18,8 @@
 @import 'base/candle';
 @import 'base/digitalMarketing';
 @import 'base/gabriel';
-@import 'base/newHeader';
 @import 'base/thirdHeader';
+@import 'base/newProjects';
 
 @import 'components/buttons';
 @import 'components/links';
