--- a/src/sass/new_home/_projectTitle.scss
+++ b/src/sass/new_home/_projectTitle.scss
@@ -59,31 +59,31 @@
     background-blend-mode: luminosity;
 
     &:nth-of-type(1) {
-      background-image: url('./project-title-img/ProjectTitleImg-5.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-5.webp');
     }
     &:nth-of-type(2) {
-      background-image: url('./project-title-img/ProjectTitleImg-1.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-1.webp');
     }
     &:nth-of-type(3) {
-      background-image: url('./project-title-img/ProjectTitleImg-7.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-7.webp');
     }
     &:nth-of-type(4) {
-      background-image: url('./project-title-img/ProjectTitleImg-3.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-3.webp');
     }
     &:nth-of-type(5) {
-      background-image: url('./project-title-img/ProjectTitleImg-4.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-4.webp');
     }
     &:nth-of-type(6) {
-      background-image: url('./project-title-img/ProjectTitleImg-8.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-8.webp');
     }
     &:nth-of-type(7) {
-      background-image: url('./project-title-img/ProjectTitleImg.webp');
+      background-image: url('../project-title-img/ProjectTitleImg.webp');
     }
     &:nth-of-type(8) {
-      background-image: url('./project-title-img/ProjectTitleImg-6.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-6.webp');
     }
     &:nth-of-type(9) {
-      background-image: url('./project-title-img/ProjectTitleImg-2.webp');
+      background-image: url('../project-title-img/ProjectTitleImg-2.webp');
     }
 
     &:before {
