--- a/src/sass/base/_digitalMarketing.scss
+++ b/src/sass/base/_digitalMarketing.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    background-image: url(../public/Ifly/Ifly-Marketing-Bg.webp);
+    background-image: url(../Ifly/Ifly-Marketing-Bg.webp);
   }
   background: #fff;
 }
