add isLoading logic

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,6 +20,7 @@
 @import 'base/gabriel';
 @import 'base/thirdHeader';
 @import 'base/newProjects';
+@import 'base/loadingSecond';
 
 @import 'components/buttons';
 @import 'components/links';
