--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
     font-family: 'Poppins', ui-sans-serif, system-ui, sans-serif,
       'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
       'Noto Color Emoji', sans-serif;
+    font-size: 1rem;
 
     @apply text-neutral-500;
   }
