--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.grid-area-hero {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.clip-path-hero {
+  clip-path: circle(15% at 50% 50%);
+}
+
 @layer base {
   html {
     font-family: 'Poppins', ui-sans-serif, system-ui, sans-serif,
