--- a/src/index.css
+++ b/src/index.css
@@ -80,10 +80,10 @@
 }
 
 .detail-section-middle {
-  @apply my-4 md:my-8 lg:my-12 px-[4%] py-14 md:py-14 bg-neutral-50 rounded-2xl flex flex-col gap-8;
+  @apply my-4 md:my-8 px-[4%] py-14 md:py-14 bg-neutral-50 rounded-2xl flex flex-col gap-8;
 }
 .detail-section-middle-image {
-  @apply rounded-2xl overflow-hidden my-4 md:my-8 lg:my-12;
+  @apply rounded-2xl overflow-hidden my-4 md:my-8;
 }
 
 .detail-title-container {
