--- a/src/index.css
+++ b/src/index.css
@@ -75,12 +75,17 @@
   -webkit-text-fill-color: transparent;
 }
 
+/* Detail pages */
 .detail-section-first {
   @apply rounded-2xl overflow-hidden mt-4 md:mt-8;
 }
 
 .detail-section-middle {
   @apply my-4 md:my-8 px-[4%] py-14 md:py-14 bg-neutral-50 rounded-2xl flex flex-col gap-8;
+}
+
+.detail-section-middle-margin {
+  @apply my-4 md:my-8;
 }
 .detail-section-middle-image {
   @apply rounded-2xl overflow-hidden my-4 md:my-8;
@@ -107,7 +112,7 @@
 }
 
 .detail-content-container {
-  @apply text-neutral-500 leading-relaxed flex flex-col gap-2;
+  @apply text-neutral-500 leading-relaxed flex flex-col gap-3  max-w-5xl mx-auto;
 }
 @layer base {
   html {
