--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,9 @@
   @apply font-title text-2xl text-neutral-800 w-[85%] mx-auto md:w-full;
 }
 
+.detail-sub-title {
+  @apply font-title text-xl text-neutral-800;
+}
 .detail-description {
   @apply text-sm text-neutral-400;
 }
@@ -114,6 +117,7 @@
 .detail-content-container {
   @apply text-neutral-500 leading-relaxed flex flex-col gap-3  max-w-5xl mx-auto;
 }
+
 @layer base {
   html {
     font-family: 'Poppins', ui-sans-serif, system-ui, sans-serif,
