--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
 }
 
 /* HERO GRID SECTION */
+/* GridDownTime */
+.slick-list,
+.slick-slide,
+.slick-track {
+  height: 100%;
+}
 /* GridNarae */
 .flip-card-inner {
   transform-style: preserve-3d;
